--- a/proj_making-plaquettes/test.ipynb
+++ b/proj_making-plaquettes/test.ipynb
@@ -18,13 +18,14 @@
     "\n",
     "To illustrate the idea, with many suboptimal choices `:-)`, I added a couple of utility functions to `utils.py` and a small graphical interface to `gui.py`.  \n",
     "Note that using a networkx graph as IR for the QEC code is suboptimal.  \n",
-    "For example, it requires additional info to identify data, x-ancilla, and y-ancilla qubits.\n",
+    "For example, it requires additional info to identify data, x-ancilla, and z-ancilla qubits.\n",
     "\n",
     "In this context, easy improvements are:\n",
     "- function to prune the edges between data qubits\n",
     "- function to save/load the IR (here a graph)\n",
     "- function to emit STIM code assuming native connectivity\n",
     "- function to check code compatibility (i.e. data qubit exists, stabilizers pairwise commute, ...)\n",
+    "- function to print the IR which does not rotate the graph and understands the overall 2d-grid structure\n",
     "\n",
     "Sections:\n",
     "- <a href=#board>Make the board</a>\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "defd25d553fa44798dac8b76cd4d8e4f",
+       "model_id": "6c64c72e4d7946e6a8e4f502d90aa3a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +90,7 @@
        "VBox(children=(Tab(children=(VBox(children=(Label(value='Add data qubits in a 2D grid:'), IntText(value=3, des…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
